fixed alignment

--- a/index.css
+++ b/index.css
@@ -28,8 +28,8 @@ footer{
 .Row1{
     width: 90%;
     border-spacing: 25px;
-    padding-left: 9%;
-    padding-right: 9%;
+/*    padding-left: 9%;
+    padding-right: 9%;*/
     padding-top:20%;
     max-width: 1000px;
 }
@@ -45,8 +45,8 @@ footer{
     display: table;
     width: 90%;
     border-spacing: 20px;
-    padding-left: 9%;
-    padding-right: 9%;
+ /*   padding-left: 9%;
+    padding-right: 9%;*/
     padding-top:2%;
 }
 
